--- a/microservice-ms/service-proxy/.settings/org.eclipse.wst.common.component
+++ b/microservice-ms/service-proxy/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="proxy-balancer">
+    <wb-module deploy-name="service-proxy">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="proxy-balancer"/>
-        <property name="java-output-path" value="/proxy-balancer/target/classes"/>
+        <property name="java-output-path" value="/service-proxy/target/classes"/>
+        <property name="context-root" value="service-proxy"/>
     </wb-module>
 </project-modules>
